tests/snapshots/run_wpt_conformance__litert_clamp_int8_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp int8 1D tensor, litert
 clamp :: clamp int8 1D tensor: index 0: actual=0 expected=-2 tolerance=0
  inputs: clampInput: [-128, 127, -4, -2, 1, 0, 2, 4]
  expected clampOutput: [-2, 125, -2, -2, 1, 0, 2, 4]
  actual clampOutput: [0, 0, 0, 0, 0, 0, 0, 0]
  expected clampOutput full nd:
(shape [8])
[-2, 125, -2, -2, 1, 0, 2, 4]
  actual clampOutput full nd:
(shape [8])
[0, 0, 0, 0, 0, 0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: i8[8];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=125, minValue=-2);
  }

  outputs { clampOutput; }
}
