tests/snapshots/run_wpt_conformance__litert_clamp_uint32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp uint32 1D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: u32[4];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=4294967290, minValue=5);
  }

  outputs { clampOutput; }
}
