tests/snapshots/run_wpt_conformance__litert_clamp_uint8_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp uint8 1D tensor, litert
 clamp :: clamp uint8 1D tensor: index 0: actual=0 expected=200 tolerance=0
  inputs: clampInput: [255, 127, 5, 0]
  expected clampOutput: [200, 127, 5, 5]
  actual clampOutput: [0, 0, 0, 0]
  expected clampOutput full nd:
(shape [4])
[200, 127, 5, 5]
  actual clampOutput full nd:
(shape [4])
[0, 0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: u8[4];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=200, minValue=5);
  }

  outputs { clampOutput; }
}
