tests/snapshots/run_wpt_conformance__litert_concat_four_float16_1D_tensors_of_different_1st_dimension_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat four float16 1D tensors of different 1st dimension along axis 0",
    "litert",
    "PASS",
)
