tests/snapshots/run_wpt_conformance__litert_concat_four_float16_4D_tensors_of_same_others_dimensions_except_different_4th_dimension_along_axis_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat four float16 4D tensors of same others dimensions except different 4th dimension along axis 3",
    "litert",
    "PASS",
)
